# faq_bot

./: .gitignore  Cargo.toml  Makefile  README.md  TODO
.python/: requirements
config/: conf.yaml  dev_loop.yaml
docker/: docker-compose.yaml
docs/: keys
env/cluster/: acl.conf  redis-1.conf  redis-2.conf  redis-3.conf
redis/: cancel_feedback.lua  get_data_entry.lua  get_grid_header.lua  toggle_like.lua
scripts/: call_redis_script.py  load_catalog.py
src/: config.rs  lang.rs  lib.rs  logs.rs  main.rs  metrics.rs  utils.rs
src/config/: db.rs  feedback.rs  http.rs  logs.rs  mod.rs
src/db/: metrics.rs  mod.rs  scripts.rs
src/db/queries/: feedback.rs  grid.rs  mod.rs  utils.rs
src/feedback/: mod.rs
src/greeting/: mod.rs
src/grid/: callback.rs  feedback.rs  goto.rs  init.rs  mod.rs  navigation.rs  render_data.rs  render_menu.rs  utils.rs
src/handlers/: handle_callback_query.rs  handle_message.rs  mod.rs
src/handlers/callback/: feedback.rs  goto.rs  like.rs  mod.rs
src/handlers/message/: mod.rs
src/handlers/message/command/: list.rs  start.rs
src/handlers/message/text/: feedback.rs  mod.rs
src/l10n/: lang.rs  mod.rs
src/l10n/buttons/: begin.rs  feedback.rs  mod.rs
src/l10n/messages/: feedback_ack.rs  feedback_prelude.rs  greeting.rs  mod.rs
src/l10n/templates/: data_entry.rs
src/templates/: data_entry.rs
src/types/: data_entry.rs  feedback.rs  mod.rs
