[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "3", default-features = false, features = ["std", "derive"] }
function_name = "0.2"
humantime-serde = "1"
md5 = "0.7"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
teloxide-core = { version = "0.3", default-features = false, features = ["rustls"] }
tera = { version = "1", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
typed-builder = "0.9"
futures = "0.3"
humantime = "2"

[dependencies.redis]
version = "0.21"
default-features = false
features = ["aio", "tokio-comp", "connection-manager", "script"]


[[bin]]
name = "dev_loop"
path = "bin/dev_loop/main.rs"
