[package]
name = "help_desk_bot"
version = "0.1.0"
edition = "2021"

[features]
default = ["openssl/vendored"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "3", default-features = false, features = ["std", "derive"] }
function_name = "0.2"
humantime-serde = "1"
md5 = "0.7"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
teloxide-core = { version = "0.3", default-features = false, features = ["rustls"] }
tera = { version = "1", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
typed-builder = "0.9"
futures = "0.3"
humantime = "2"
ulid = "0.5"
r2d2 = "0.8"
url = { version = "2", features = ["serde"] }
axum = "0.4"
prometheus = "0.13"
http = "0.2"
axum-server = { version = "0.3", features = ["tls-rustls"] }
openssl = { version = "0.10", features = ["vendored"] }

[dependencies.redis]
version = "0.21"
default-features = false
features = ["cluster", "script", "streams", "r2d2", "tls"]

[patch.crates-io]
redis = { git = "https://github.com/verrchu/redis-rs.git", branch = "add-cluster-username" }
